k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniauth
  namespace: uniauth
  labels:
    app.kubernetes.io/name: uniauth
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uniauth
